--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Static Title</title>
+    <title>H.A.D.E.S.</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+     <!-- D3.js CDN source -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+    
   </head>
 
   <header>
     <div>
       <ul>
-        <li><a href="/signout">SIGN OUT</a></li>        
-        <li><a href="/membersonly/gifts">Gime Wishes</a></li>
-        <li><a href="/membersonly/users">Search</a></li>
-        <li><a href="/membersonly/users/myprofile">Profile</a></li>
+        <li><a href="/signout">Link1</a></li>        
+        <li><a href="/membersonly/gifts">Link2</a></li>
+        <li><a href="/membersonly/users">Link3</a></li>
       </ul>
     </div>
   </header>
