--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,16 +1,205 @@
-html,
 body {
-  background-size: 100%;
-  background-attachment: fixed;
-  background-image: url(http://img01.deviantart.net/6d31/i/2009/153/d/0/charon_by_shadow_net.jpg);
+  background-color: #4F5165;
 }
-button,
-select {
-  width: 200px;
-  border: none;
-  color: #000000;
-  padding: 16px 32px;
-  margin: 4px 2px;
-  cursor: pointer;
-  text-decoration: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #50D8D7;
+  border-radius: 10px;
+  text-align: center;
+}
+h1 {
+  font-size: 66px;
+}
+p {
+  font-size: 16px;
+  color: #D8365F;
+}
+a {
+  color: green;
+}
+.container {
+  width: 100%;
+}
+form {
+  text-align: center;
+}
+ul {
+  border-radius: 10px;
+  min-height: 50px;
+  margin: 20px auto;
+  width: 80%;
+  list-style: none;
+}
+li {
+  color: #50D8D7;
+  font-size: 18px;
+}
+button {
+  background-color: red;
+}
+input[type=text] {
+  width: 66%;
+  background-color: #50D8D7;
+}
+input[type=checkbox] {
+  margin-right: 8px;
+  margin-left: 20%;
+}
+.container {
+  padding: 0 20px;
+}
+.row {
+  width: 100%;
+  max-width: 1140px;
+  min-width: 755px;
+  margin: 0 auto;
+  padding: 0.5em 0;
+  *zoom: 1;
+}
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+.row:after {
+  clear: both;
+}
+.col-12 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-12:last-child {
+  margin-right: 0;
+}
+.col-11 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 91.41666667%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-11:last-child {
+  margin-right: 0;
+}
+.col-10 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 82.83333333%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-10:last-child {
+  margin-right: 0;
+}
+.col-9 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 74.25%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-9:last-child {
+  margin-right: 0;
+}
+.col-8 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 65.66666667%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-8:last-child {
+  margin-right: 0;
+}
+.col-7 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 57.08333333%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-7:last-child {
+  margin-right: 0;
+}
+.col-6 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 48.5%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-6:last-child {
+  margin-right: 0;
+}
+.col-5 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 39.91666667%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-5:last-child {
+  margin-right: 0;
+}
+.col-4 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 31.33333333%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-4:last-child {
+  margin-right: 0;
+}
+.col-3 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 22.75%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-3:last-child {
+  margin-right: 0;
+}
+.col-2 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 14.16666667%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-2:last-child {
+  margin-right: 0;
+}
+.col-1 {
+  display: block;
+  position: relative;
+  float: left;
+  width: 5.58333333%;
+  margin-right: 3%;
+  border: solid black 1px;
+}
+.col-1:last-child {
+  margin-right: 0;
+}
+.results {
+  visibility: hidden;
 }
