--- a/src/public/less/style.less
+++ b/src/public/less/style.less
@@ -1,20 +1,9 @@
-@blue:      #00C8F8;
-@grey:      #6E7376;
-@pink:      #EEB4C0;
-@black:     #000000;
+// Main Stylesheet
+/// @import (inline) '../bower_components/normalize-css/normalize.css';//Browser reset
+@import 'modules/colors';
+@import 'modules/type';
+@import 'modules/grid';
 
-html, body { 
-  background-size:       100%;
-  background-attachment: fixed;
-  background-image:      url(http://img01.deviantart.net/6d31/i/2009/153/d/0/charon_by_shadow_net.jpg);
-}
-
-button, select {
-  width:  200px;
-  border: none;
-  color:  @black;
-  padding: 16px 32px;
-  margin:  4px 2px;
-  cursor:  pointer;
-  text-decoration: none;
+.results {
+  visibility: hidden;
 }
