fixed server-cli handling

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -3,7 +3,7 @@
     <div class="col-5">
       <div class="formArea">
         <h2>Fill in the details below</h2>
-        <form name="profile-form" method="post" action="/" accept-charset="utf-8">
+        <form name="profile-form" method="post" action="#" accept-charset="utf-8">
           <label for="name" >State</label>
             <select name="state" required>
               <option value=""></option>
@@ -82,7 +82,7 @@
               <option value="female">Female</option>
             </select>
           <br />
-          <button>Submit</button>
+          <button type="submit">Submit</button>
         </form>
       </div>   
     </div>
@@ -127,4 +127,5 @@
       </div>
   
 </main>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js'></script>
 <script type="text/javascript" src="/js/graphs.js"></script>
