--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -78,8 +78,8 @@
           <label for="gender" >Sex</label>
             <select name="gender" required>
               <option value=""></option>
-              <option value="male">Male</option>
-              <option value="female">Female</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
             </select>
           <br />
           <button type="submit">Submit</button>
