--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -100,13 +100,13 @@
     <div class="col-5">
       <div class="ageHistogram">
         <h3>Histogram Title</h3>
-        <p>I'm your HISTOGRAM</p>        
+<!--         <p>I'm your HISTOGRAM</p>  -->       
       </div>      
     </div>
     <div class="col-5">
       <div class="radar">
         <h3>Radar Title</h3>
-        <p>I'm your RADAR</p>        
+ <!--        <p>I'm your RADAR</p>    -->     
       </div>      
     </div>
   </div>
@@ -128,4 +128,5 @@
   
 </main>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js'></script>
+<script type="text/javascript" src="/js/d3pie.min.js"></script>
 <script type="text/javascript" src="/js/graphs.js"></script>
