--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -203,3 +203,8 @@ input[type=checkbox] {
 .results {
   display: none;
 }
+svg {
+  border: solid red 2px;
+  background-color: #666;
+  display: block;
+}
