--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,6 +1,6 @@
 <main class="container">
   <div class="row">
-    <div class="col-5">
+    <div class="col-12">
       <div class="formArea">
         <h2>Fill in the details below</h2>
         <form name="profile-form" method="post" action="#" accept-charset="utf-8">
@@ -58,7 +58,7 @@
               <option value="Wisconsin">Wisconsin</option>
               <option value="Wyoming">Wyoming</option> 
           </select>
-          <br />
+          
           <label for="age_group" >Age Group</label>
             <select name="age_group" required>
               <option value=""></option>
@@ -74,39 +74,29 @@
               <option value="75-84 years">75-84 years</option>
               <option value="85+ years">85+ years</option>
           </select>
-          <br />
+          
           <label for="gender" >Sex</label>
             <select name="gender" required>
               <option value=""></option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
             </select>
-          <br />
+          
           <button type="submit">Submit</button>
         </form>
       </div>   
-    </div>
-    <div class="col-5">
-      <div class="pieChart">   
-        <h3>Pie Title</h3>
-        <p>I'm your pie chart</p>
-      </div>              
-    </div> 
-
-  </div>
-  <!-- End of row -->
-
-  <div class="row">
-    <div class="col-5">
-      <div class="ageHistogram">
-        <h3>Histogram Title</h3>
-<!--         <p>I'm your HISTOGRAM</p>  -->       
-      </div>      
-    </div>
-    <div class="col-5">
-      <div class="radar">
-        <h3>Radar Title</h3>
- <!--        <p>I'm your RADAR</p>    -->     
+    </div> <!-- End of row -->
+    <div class="row">
+      <div class="col-4">
+        <div class="pieChart">   
+          <h3>Pie Title</h3>
+          <!-- <p>I'm your pie chart</p> -->
+        </div>              
+      </div>   
+      <div class="col-5">
+        <div class="ageHistogram">
+          <h3>Histogram Title</h3>
+            <!--<p>I'm your HISTOGRAM</p>  -->       
       </div>      
     </div>
   </div>
