--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -200,11 +200,21 @@ input[type=checkbox] {
 .col-1:last-child {
   margin-right: 0;
 }
+body {
+  background-image: url(/img/hadesBg.jpg);
+}
 .results {
   display: none;
 }
 svg {
   border: solid red 2px;
-  background-color: #666;
   display: block;
+}
+button {
+  background-color: cyan;
+  margin-left: 2px;
+}
+form label:not(:first-child) {
+  margin-left: 30px;
+  color: red;
 }
