--- a/src/public/less/modules/colors.less
+++ b/src/public/less/modules/colors.less
@@ -9,3 +9,12 @@
 @ul-border: #547AA5;
 
 
+
+@bgColor: #8D99AE;
+@centerColor: #8D99AE;
+@titleColor: #8F233C;
+@textColor: #2B2D42;
+@offWhite: #EDF2F4;
+@lightBlue: #048CD2;
+
+
