--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -10,12 +10,9 @@
 
 
   <header>
-    <div>
-      <ul>
-        <li><a href="/signout">Link1</a></li>        
-        <li><a href="/membersonly/gifts">Link2</a></li>
-        <li><a href="/membersonly/users">Link3</a></li>
-      </ul>
+    <div class="row topper">
+      <h1>H.A.D.E.S</h1>
+      <h6>(How Anyone Dies in Every State)</h6>
     </div>
   </header>
 <body>
