--- a/src/public/less/style.less
+++ b/src/public/less/style.less
@@ -4,8 +4,57 @@
 @import 'modules/type';
 @import 'modules/grid';
 
-body {
+*, *:before, *:after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {  
+  //background-color: green;
   background-image: url(/img/hadesBg.jpg);
+  background-size:       100%;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+
+
+svg {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  //border: solid red 2px;
+  //background-color: #666;
+  display: block;
+}
+
+.col-4, .col-5 {
+min-height: 400px;
+}
+
+h1 {
+  margin-top: 0px;
+  margin-bottom: 2px;
+}
+
+h3, h6 {
+  margin-top: 2px;
+  margin-bottom: 5px
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #3DBE2E;
+    shape-rendering: crispEdges;
+}
+
+.axis text{
+    font: Times;
+    font-size: 18px;
+    font-weight: bold;
+    fill: #3DBE2E;
+    //outline-style: ;
 }
 
 .results {
@@ -13,18 +62,39 @@ body {
   display: none;
 }
 
-svg {
-  border: solid red 2px;
-  //background-color: #666;
-  display: block;
+
+button, select {
+  background-color: @lightBlue;
+  color:  @black;
+  margin-left: 2px;
+  width:  200px;
+  border-radius: 12px;  
+  padding: 16px 32px;
+  margin:  4px 2px;
+  cursor:  pointer;
+  text-decoration: none;
+  border: 2px solid @titleColor;
 }
 
-button {
-  background-color: cyan;
-  margin-left: 2px;
-}
+
+button:hover {
+  cursor: pointer;
+  border-radius: 6px;
+  color: @offWhite;
+  background-color: @titleColor;
+  border: 2px solid @textColor;
+  }
 
 form label:not(:first-child) {
   margin-left: 30px;
   color: red;
+}
+
+.topper {
+  background-color: black;
+}
+
+.copyright {
+  display: block;
+  margin: auto;
 }
