--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,8 +1,21 @@
-<div class="site-footer">
-  <a href="/about">About</a>
-  <a href="/contact">Contact</a>
-  <a href="/termsofuse">Terms of Use</a>
-</div>
+
+<!-- Footer section -->
+<section class="footer">
+  <div class="container">
+  <hr />
+    <div class="row">
+      <div class="col-12">
+        <!-- <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+        <a href="/termsofuse">Terms of Use</a> -->
+        <div class="copyright">
+          <p class="text-center">© 2016 Dexter Golden. All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /Footer section -->
  
  
 </body>
