--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -9,7 +9,7 @@
         <a href="/contact">Contact</a>
         <a href="/termsofuse">Terms of Use</a> -->
         <div class="copyright">
-          <p class="text-center">© 2016 Dexter Golden. All Rights Reserved</p>
+          <h4>© 2016 Dexter Golden. All Rights Reserved</h4>
         </div>
       </div>
     </div>
