--- a/src/public/less/style.less
+++ b/src/public/less/style.less
@@ -10,23 +10,18 @@
 }
 
 body {  
-  //background-color: green;
   background-image: url(/img/hadesBg.jpg);
-  //background-size:       100%;
   background-attachment: fixed;
   background-size: cover;
 }
-
 
 
 svg {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  //border: solid red 2px;
-  //background-color: #666;
-  display: block;
 }
+
 
 .col-4, .col-5 {
 min-height: 400px;
@@ -35,21 +30,25 @@ min-height: 400px;
 h1 {
   margin-top: 0px;
   margin-bottom: 2px;
+  font-family: 'Exo 2', sans-serif;
 }
 
 h3, h6 {
   margin-top: 2px;
-  margin-bottom: 5px
+  margin-bottom: 5px;
+  font-family: 'Exo 2', sans-serif;
 }
 
 h4 {
   font-size: 12px;
   margin: 0;
   color: pink;
+  font-family: 'Exo 2', sans-serif;
 }
 
 h6 {
   font-style: italic;
+  font-family: 'Exo 2', sans-serif;
 }
 
 .axis path,
@@ -68,7 +67,6 @@ h6 {
 }
 
 .results {
-  // visibility: hidden;
   display: none;
 }
 
@@ -97,6 +95,7 @@ button:hover {
 
 label {
   color: @heading-color;
+  font-family: 'Exo 2', sans-serif;
 }
 
 label:not(:first-child) {
@@ -104,13 +103,11 @@ label:not(:first-child) {
 }
 
 .topper {
-  // background-color: black;  
-  // opacity: 0.5;
   background: rgba(0, 0, 0, .25);
-  //box-shadow: 5px -2px 2px rgba(34,34,34,0.6);
 }
 
 .copyright {
+  font-family: 'Exo 2', sans-serif;
   display: block;
   margin: auto;
 }
