--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -87,14 +87,14 @@
       </div>   
     </div> <!-- End of row -->
     <div class="row">
-      <div class="col-4">
+      <div class="col-5">
         <div class="pieChart">   
-          <h3>Pie Title</h3>         
+          <h3>State's Leading Death Causes for Your Demographic</h3>         
         </div>              
       </div>   
       <div class="col-5">
         <div class="ageHistogram">
-          <h3>Histogram Title</h3>      
+          <h3>Leading Cause Breakout By Age Group</h3>      
       </div>      
     </div>
   </div>
