--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>H.A.D.E.S.</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-     <!-- D3.js CDN source -->
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
     
   </head>
