--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -207,7 +207,7 @@ input[type=checkbox] {
   margin: 0;
 }
 body {
-  background-image: url(/img/hadesBg.jpg);
+  background-image: url(/img/hadesBgLite1.jpg);
   background-attachment: fixed;
   background-size: cover;
 }
