--- a/src/public/less/style.less
+++ b/src/public/less/style.less
@@ -1,5 +1,4 @@
 // Main Stylesheet
-/// @import (inline) '../bower_components/normalize-css/normalize.css';//Browser reset
 @import 'modules/colors';
 @import 'modules/type';
 @import 'modules/grid';
@@ -10,7 +9,7 @@
 }
 
 body {  
-  background-image: url(/img/hadesBg.jpg);
+  background-image: url(/img/hadesBgLite1.jpg);
   background-attachment: fixed;
   background-size: cover;
 }
@@ -63,7 +62,6 @@ h6 {
     font-size: 18px;
     font-weight: bold;
     fill: #3DBE2E;
-    //outline-style: ;
 }
 
 .results {
