--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -5,11 +5,9 @@
   <hr />
     <div class="row">
       <div class="col-12">
-        <!-- <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/termsofuse">Terms of Use</a> -->
         <div class="copyright">
           <h4>© 2016 Dexter Golden. All Rights Reserved</h4>
+          <h4>Mortailty Statistics Provided By CDC 2014 Reports</h4>
         </div>
       </div>
     </div>
